Add support for templating in batched sending (#1)
